--- a/Main_WebsiteIteration_1/calculator.html
+++ b/Main_WebsiteIteration_1/calculator.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EasyPantry - Home</title>
+    <title>EasyPantry - Substitution Calculator</title>
+    <link rel="stylesheet" href="easypantry.css" />
     <link rel="stylesheet" href="easypantry.css" />
     <script src="header.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-        addHeader("home");
+        addHeader("calculator");
       });
     </script>
   </head>
