--- a/Main_WebsiteIteration_1/IngredientSubs.html
+++ b/Main_WebsiteIteration_1/IngredientSubs.html
@@ -85,7 +85,7 @@
                   <h3>Substitutions</h3>
                   <ul>
                     <li>
-                      1 cup
+                      Amount 1 cup
                     </li>
                     <Li>
                       Add 2 tablespoons cornstarch to a 1-cup measuring cup; fill rest of the way with all-purpose flour
@@ -103,7 +103,7 @@
                   <h3>Substitutions</h3>
                   <ul>
                     <li>
-                      1 tablespoon
+                      Amount: 1 tablespoon
                     </li>
                     <Li>
                       1.5 tablespoons all-purpose flour
@@ -121,7 +121,7 @@
                   <h3>Substitutions</h3>
                   <ul>
                     <li>
-                      1/4 teaspoon
+                     Amount: 1/4 teaspoon
                     </li>
                     <Li>
                       1/2 teaspoon lemon juice
@@ -138,7 +138,7 @@
                   <h3>Substitutions</h3>
                   <ul>
                     <li>
-                      1
+                      1 : 1
                     </li>
                     <Li>
                       For yeast breads, cookies, pancakes, or waffles, mix 2 tablespoons ground flax meal and 3 tablespoons cold water. Let the mixture rest for 10 minutes before adding.
@@ -155,13 +155,115 @@
                   <h3>Substitutions</h3>
                   <ul>
                     <li>
-                      1/2 cup
+                     Amount: 1/2 cup
                     </li>
                     <Li>
                       1/4 cup milk and 1/4 cup cream, or 1/2 cup non-dairy coffee creamer
                     </Li>
                   </ul>
                 </div>
+
+                <div class="description">
+                  <H1>Heavy Cream </H1></div>
+                  <div class="gallery">
+                    <a target="_blank" href="hcream.jpg">
+                      <img src="hcream.jpg" alt="Heavy Cream" width="300" height="300">
+                    </a>
+                    <div class="substitutions">
+                  <h3>Substitutions</h3>
+                  <ul>
+                    <li>
+                     Amount: 1/2 cup
+                    </li>
+                    <Li>
+                      Melt ¼ cup unsalted butter and slowly whisk in ¾ cup whole milk or half-and-half
+                    </Li>
+                  </ul>
+                </div>
+                <div class="description">
+                  <H1>Heavy Cream </H1></div>
+                  <div class="gallery">
+                    <a target="_blank" href="hcream.jpg">
+                      <img src="hcream.jpg" alt="Heavy Cream" width="300" height="300">
+                    </a>
+                    <div class="substitutions">
+                  <h3>Substitutions</h3>
+                  <ul>
+                    <li>
+                     1 cup
+                    </li>
+                    <Li>
+                      Melt 1/4 cup unsalted butter and slowly whisk in ¾ cup whole milk or half-and-half
+                    </Li>
+                  </ul>
+                </div>
+                <div class="description">
+                  <H1>Honey</H1></div>
+                  <div class="gallery">
+                    <a target="_blank" href="honey.jpg">
+                      <img src="honey.jpg" alt="Honey" width="300" height="300">
+                    </a>
+                    <div class="substitutions">
+                  <h3>Substitutions</h3>
+                  <ul>
+                    <li>
+                     Amount: 1:1
+                    </li>
+                    <Li>
+                      Corn syrup, molasses, maple syrup, or agave nectar
+                    </Li>
+                  </ul>
+                </div>
+                <div class="description">
+                  <H1>Marzcapone</H1></div>
+                  <div class="gallery">
+                    <a target="_blank" href="marzcapone.jpeg">
+                      <img src="marzcapone.jpeg" alt="marzcapone" width="300" height="300">
+                    </a>
+                    <div class="substitutions">
+                  <h3>Substitutions</h3>
+                  <ul>
+                    <li>
+                     Amount: 16oz
+                    </li>
+                    <Li>
+                      Mix 12 ounces of room temperature cream cheese with 1/4 cup heavy whipping cream and ¼ cup sour cream
+                    </Li>
+                  </ul>
+                </div>
+                <H1>Powdrered Sugar</H1></div>
+                  <div class="gallery">
+                    <a target="_blank" href="psugar.jpeg">
+                      <img src="psugar.jpeg" alt="Powdrered Sugar" width="300" height="300">
+                    </a>
+                    <div class="substitutions">
+                  <h3>Substitutions</h3>
+                  <ul>
+                    <li>
+                     Amount: 1:1
+                    </li>
+                    <Li>
+                      Grind 1/2 cup granulated sugar in a blender until fine. Multiply as needed to reach the amount called for in the recipe.
+                    </Li>
+                  </ul>
+                </div>
+                <H1>Powdrered Sugar</H1></div>
+                  <div class="gallery">
+                    <a target="_blank" href="psugar.jpeg">
+                      <img src="psugar.jpeg" alt="Powdrered Sugar" width="300" height="300">
+                    </a>
+                    <div class="substitutions">
+                  <h3>Substitutions</h3>
+                  <ul>
+                    <li>
+                     Amount: 1:1
+                    </li>
+                    <Li>
+                      Grind 1/2 cup granulated sugar in a blender until fine. Multiply as needed to reach the amount called for in the recipe.
+                    </Li>
+                  </ul>
+                </div>
+      </body>
       </body>
     </body>
 </html>
